# TMRX

./: .clangd  .gitignore  CLAUDE.md  Makefile  README.md  antora-playbook.yml  meson.build  stubnets.cc  test.v  tmrx.cc
.github/: release-drafter.yml
.github/workflows/: docs.yml  release.yml
docs/: antora.yml
docs/modules/ROOT/: nav.adoc
docs/modules/ROOT/pages/: configuration-reference.adoc  configuration.adoc  error-detection.adoc  examples.adoc  index.adoc  installation.adoc  quick-start.adoc  synthesis-flow.adoc  tmr-strategies.adoc  troubleshooting.adoc  yosys-integration.adoc
include/: config_manager.h  tmrx.h  tmrx_constants.h  tmrx_logic_expansion.h  tmrx_mod_expansion.h  tmrx_utils.h  utils.h
src/: config_manager.cc  mark_pass.cc  tmrx.cc  tmrx_logic_expansion.cc  tmrx_mod_expansion.cc  tmrx_pass.cc  tmrx_utils.cc  utils.cc
supplemental-ui/partials/: header-content.hbs
tests/config_tests/: meson.build
tests/config_tests/auto-error-port/: auto_error_port.ys  check_auto_error_port.sh  meson.build  tmrx_config.toml  top.v
tests/config_tests/child-error-port-name/: child_error_port_name.ys  meson.build  tmrx_config.toml  top.v
tests/config_tests/global-1/: config_test.ys.in  meson.build  tmrx_config.toml  top.v
tests/config_tests/prevent-renaming/: check_prevent_renaming.sh  default_tmrx_config.toml  emit_rtlil.ys  meson.build  prevent_tmrx_config.toml  top.v
tests/fault_injection_tests/: meson.build
tests/fault_injection_tests/fi_counter/: fi_counter.v  meson.build  patch_vl_macros.py  run_fi_counter.py  synth.ys.in  tb.cpp  tmrx_config.toml
tests/fault_injection_tests/fi_down_counter/: fi_down_counter.v  meson.build  tb.cpp  tmrx_config.toml
tests/fault_injection_tests/fi_shift_reg/: fi_shift_reg.v  meson.build  tb.cpp
tests/formal_equiv_tests/: meson.build
tests/formal_equiv_tests/config_complex/: equiv.sby.in  meson.build  tmrx_config.toml  top.v
tests/formal_equiv_tests/counter_8bit/: counter_8bit.v  equiv.sby.in  meson.build  tmrx_config.toml
tests/formal_equiv_tests/croc/: equiv.sby.in  gen_abs_flist.py  meson.build  sg13g2_stubs.sv  tc_sram_impl_stub.sv  tmrx_config.toml
tests/formal_equiv_tests/simple_ff/: equiv.sby.in  meson.build  simple_ff.v  tmrx_config.toml
tests/formal_equiv_tests/sub_module_tests/: equiv.sby.in  meson.build  tmrx_config.toml.in
tests/formal_equiv_tests/sub_module_tests/verilog_sources/: ihp_dummy.v  ihp_dummy_clock_out.v  ihp_dummy_connected_and_processed_err.v  ihp_dummy_connected_err.v  ihp_dummy_no_err.v
tests/ihp_tests/: ihp_dummy.v  meson.build  tmrx_config.toml
tests/ihp_tests/flattened/: ihp_synth_flattened.ys.in  meson.build
tests/ihp_tests/unflattened/: ihp_synth_unflattened.ys.in  meson.build
tests/ref_tests/: meson.build
tests/ref_tests/counter/: counter.v  counter.ys.in  meson.build  tmrx_config.toml
tests/ref_tests/croc/: croc_yosys_synthesis.tcl.in  meson.build  tmrx_config.toml
tests/std_tests/: flip-flop-multi.v  flip-flop-neg.v  flip-flop.v  full_adder.v  meson.build  nested.v  synth_template.ys.in  xor.v
tests/sub_module_instantiation_tests/: meson.build  synth.ys.in  tmrx_config.toml.in
tests/sub_module_instantiation_tests/verilog_sources/: ihp_dummy.v  ihp_dummy_clock_out.v  ihp_dummy_connected_and_processed_err.v  ihp_dummy_connected_err.v  ihp_dummy_no_err.v
tests/voter_tests/: meson.build
tests/voter_tests/custom_voter/: counter.v  custom_voter.ys.in  meson.build  simple_voter.v  tmrx_config.toml
tests/voter_tests/custom_voter_complex/: acc_top.v  custom_voter_complex.ys.in  meson.build  stateful_voter.v  tmrx_config.toml
tests/voter_tests/custom_voter_separate_reset/: custom_voter_separate_reset.ys.in  meson.build  stateful_voter.v  tmrx_config.toml  top.v
utils/: visualize-mod-dependency-graph-fast.py  visualize-mod-dependency-graph.py
